--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <div class="text-container">
             <h1 class="text">Happy Birthday! Sayang</h1>
         </div>
+
+        <img src="images/balloons_4128882.png" alt="" class="balloons">
+        <img src="images/balloons_4128882.png" alt="" class="balloons">
     </div>
 
     <iframe class="--spotify-frame" src="https://open.spotify.com/embed/track/5VBjyOQzqlPNgdRPMM6prF?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
