--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         <img src="images/balloons_4128882.png" alt="" class="balloons">
     </div>
 
+    <div class="seccond-container">
+    </div>
+
     <iframe class="--spotify-frame" src="https://open.spotify.com/embed/track/5VBjyOQzqlPNgdRPMM6prF?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
+    <script src="js/script.js"></script>
 </body>
 </html>
